--- a/src/index.html
+++ b/src/index.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
   <title>UTP</title>
-  <link rel="stylesheet" href="css/index.css">
-  <link rel="stylesheet" href="css/global.css">
-  <link rel="stylesheet" href="../node_modules/98.css/style.css">
+  <link rel="stylesheet" href="css/index.css" />
+  <link rel="stylesheet" href="css/global.css" />
+  <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css" /> -->
+  <link rel="stylesheet" href="./css/98css/style.css" />
 </head>
+
 <body>
   <div class="window">
-    <div class="title-bar">
-      <div class="title-bar-text">
-        UntitledThesisProject UI Demo
-      </div>
-      
+    <div class="title-bar" id="mainTitleBar">
+      <div class="title-bar-text">UntitledThesisProject UI Demo</div>
+
       <div class="title-bar-controls">
         <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button>
         <!-- <button aria-label="Maximize" id="maximiseWindow" style="-webkit-app-region: no-drag"></button> -->
@@ -24,9 +25,9 @@
       <p>This is a user interface demonstration of UntitledThesisProject.</p>
       <p><i>Text in italic.</i> <b>Text in bold.</b></p>
       <div class="field-row">
-        <input type="checkbox" id="cb1">
+        <input type="checkbox" id="cb1" />
         <label for="cb1">checkbox</label>&nbsp;&nbsp;&nbsp;
-        <input disabled type="checkbox" id="cb2">
+        <input disabled type="checkbox" id="cb2" />
         <label for="cb2">disabled checkbox</label>
       </div>
       <section class="field-row" style="justify-content: flex-end">
@@ -35,6 +36,7 @@
       </section>
     </div>
   </div>
-  <script src="js/index.js"></script>    
+  <script src="js/index.js"></script>
 </body>
+
 </html>
