--- a/src/quitModal.html
+++ b/src/quitModal.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="UTF-8">
     <title>UTP</title>
-    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/quitModal.css">
     <link rel="stylesheet" href="css/global.css">
-    <link rel="stylesheet" href="../node_modules/98.css/style.css">
+    <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css"> -->
+    <link rel="stylesheet" href="./css/98css/style.css" />
 </head>
+
 <body>
     <div class="window">
-        <div class="title-bar">
+        <div class="title-bar" id="quitModalTitleBar">
             <div class="title-bar-text">
                 UntitledThesisProject UI Demo
             </div>
-            
+
             <div class="title-bar-controls">
-                <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button>
+                <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
                 <!-- <button aria-label="Maximize" id="maximiseWindow" style="-webkit-app-region: no-drag"></button> -->
                 <button aria-label="Close" id="closeWindow" style="-webkit-app-region: no-drag"></button>
             </div>
@@ -28,6 +31,7 @@
             </section>
         </div>
     </div>
-    <script src="js/index.js"></script>    
+    <script src="js/quitModal.js"></script>
 </body>
+
 </html>
