--- a/src/quitModal.html
+++ b/src/quitModal.html
@@ -14,7 +14,7 @@
     <div class="window">
         <div class="title-bar" id="quitModalTitleBar">
             <div class="title-bar-text">
-                UntitledThesisProject UI Demo
+                UntitledThesisProject
             </div>
 
             <div class="title-bar-controls">
