Prevent double click on title bar to maximise

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
     </div>
     <div class="window-body">
       <div class="menubar">
-        <button>File</button>
+        <button disabled>File</button>
         <span class="menubar-padding">&nbsp;</span>
         <button>Settings</button>
         <span class="menubar-padding">&nbsp;</span>
@@ -101,7 +101,7 @@
     </div>
   </div>
 
-
+  <script src="js/global.js"></script>
   <script src="js/index.js"></script>
 </body>
 
