Changing cursor style (except for title bar)

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <div class="window">
     <div class="title-bar" id="mainTitleBar">
       <div class="title-bar-text-container">
-        <span class="title-bar-text">TODO-ICON </span>
+        <img class="title-bar-icon" id="titleBarIcon" src="bin/images/titleBarIcon.png" />
         <span class="title-bar-text">UntitledThesisProject (Beta Build 04.11.20)</span>
       </div>
 
@@ -39,10 +39,10 @@
       </div>
       <section class="field-row" style="justify-content: space-between">
         <label for="findBar">Find in UTP </label>
-        <input id="findBar" type="text" />
+        <input id="findBar" type="text" spellcheck="false" />
         <button>Search</button>
       </section>
-      <p>This is a user interface demonstration of UntitledThesisProject.</p>
+      <p>This is a user interface demostration of UntitledThesisProject.</p>
       <p><i>Text in italic.</i> <b>Text in bold.</b></p>
       <div class="field-row">
         <input type="checkbox" id="cb1" />
@@ -56,19 +56,11 @@
       </section>
 
       <ul class="tree-view">
-        <li>Table of Contents</li>
-        <li>What is web development?</li>
+        <li>Welcome</li>
+        <li>What is UTP?</li>
         <li>
-          CSS
-          <ul>
-            <li>Selectors</li>
-            <li>Specificity</li>
-            <li>Properties</li>
-          </ul>
-        </li>
-        <li>
-          <details open>
-            <summary>JavaScript</summary>
+          <details>
+            <summary>Table of Contents</summary>
             <ul>
               <li>Avoid at all costs</li>
               <li>
@@ -95,8 +87,14 @@
             </ul>
           </details>
         </li>
-        <li>HTML</li>
-        <li>Special Thanks</li>
+        <li>
+          <details>
+            <summary>Demostrations</summary>
+            <ul>Demo 1</ul>
+          </details>
+        </li>
+        <li>Glossary</li>
+        <li>DO NOT DISTRIBUTE</li>
       </ul>
     </div>
   </div>
