Added double click title bar icon to quit app

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
   <div class="window">
     <div class="title-bar" id="mainTitleBar">
       <div class="title-bar-text-container">
-        <img class="title-bar-icon" id="titleBarIcon" src="bin/images/titleBarIcon.png" />
+        <button class="title-bar-icon" id="titleBarIcon" style="-webkit-app-region: no-drag"></button>
         <span class="title-bar-text">UntitledThesisProject (Beta Build 04.11.20)</span>
       </div>
 
