Adding Times font

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
           <li>DO NOT DISTRIBUTE</li>
         </ul>
 
-        <iframe src="" id="mainContentSection"></iframe>
+        <iframe src="./frames/welcome.html" id="mainContentSection"></iframe>
 
       </div>
 
