Fixed mainWindow content  alignment

--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -10,7 +10,66 @@
 <body>
 
     <h1>Welcome!</h1>
-    <div>Lorem ipsum, yada yada yada</div>
+    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+        magna
+        aliqua. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Nulla pellentesque dignissim
+        enim sit
+        amet venenatis urna cursus. Sit amet commodo nulla facilisi nullam. Odio pellentesque diam volutpat commodo.
+        Eget est
+        lorem ipsum dolor sit amet consectetur adipiscing. Egestas congue quisque egestas diam in arcu cursus euismod.
+        Enim nec
+        dui nunc mattis enim ut tellus elementum. Habitant morbi tristique senectus et netus et malesuada fames. Duis
+        ultricies
+        lacus sed turpis. Mauris a diam maecenas sed enim ut sem viverra. Bibendum arcu vitae elementum curabitur vitae.
+        Proin
+        sagittis nisl rhoncus mattis rhoncus urna neque viverra justo. Ut tristique et egestas quis ipsum suspendisse.
+    </div>
+    <div>Egestas congue quisque egestas diam. Pellentesque elit ullamcorper dignissim cras tincidunt lobortis feugiat
+        vivamus.
+        Cras pulvinar mattis nunc sed blandit. Lacinia quis vel eros donec ac odio tempor orci dapibus. Tortor consequat
+        id
+        porta nibh venenatis cras sed felis eget. Id neque aliquam vestibulum morbi. Ornare arcu dui vivamus arcu felis
+        bibendum
+        ut. Nec ultrices dui sapien eget mi proin sed libero. Viverra nibh cras pulvinar mattis nunc sed blandit libero.
+        Enim
+        nec dui nunc mattis enim ut tellus elementum. Neque vitae tempus quam pellentesque. Congue eu consequat ac felis
+        donec
+        et. Fermentum dui faucibus in ornare. Massa sed elementum tempus egestas sed. Sem integer vitae justo eget magna
+        fermentum iaculis eu.</div>
+    <div>Gravida rutrum quisque non tellus orci ac auctor. Neque ornare aenean euismod elementum nisi quis eleifend
+        quam. Dolor
+        magna eget est lorem ipsum. Massa vitae tortor condimentum lacinia quis vel. Viverra maecenas accumsan lacus vel
+        facilisis volutpat est velit. Feugiat nisl pretium fusce id velit ut tortor. Consequat mauris nunc congue nisi
+        vitae
+        suscipit tellus mauris. Eu nisl nunc mi ipsum faucibus vitae aliquet nec. Felis imperdiet proin fermentum leo
+        vel orci.
+        Risus ultricies tristique nulla aliquet enim tortor at. Facilisi nullam vehicula ipsum a arcu.
+    </div>
+    <div>Congue mauris rhoncus aenean vel elit scelerisque. At elementum eu facilisis sed odio morbi quis. Feugiat nisl
+        pretium
+        fusce id velit ut tortor pretium. Dolor sed viverra ipsum nunc aliquet bibendum enim facilisis. Iaculis at erat
+        pellentesque adipiscing commodo elit at imperdiet dui. Sit amet dictum sit amet justo donec enim diam. Magna ac
+        placerat
+        vestibulum lectus mauris ultrices. Vel facilisis volutpat est velit egestas. Donec ac odio tempor orci dapibus
+        ultrices
+        in iaculis. Feugiat nisl pretium fusce id velit ut tortor pretium viverra. At ultrices mi tempus imperdiet nulla
+        malesuada pellentesque. Malesuada proin libero nunc consequat interdum varius sit amet. Quisque id diam vel quam
+        elementum pulvinar etiam non. Condimentum vitae sapien pellentesque habitant morbi. Adipiscing tristique risus
+        nec
+        feugiat in fermentum posuere urna nec. Eu volutpat odio facilisis mauris sit amet massa vitae tortor. Quam nulla
+        porttitor massa id neque aliquam. Turpis massa tincidunt dui ut ornare lectus sit amet est.
+    </div>
+    <div>Sapien pellentesque habitant morbi tristique senectus et netus et malesuada. Est lorem ipsum dolor sit amet
+        consectetur
+        adipiscing elit. Commodo sed egestas egestas fringilla phasellus faucibus scelerisque. Quis enim lobortis
+        scelerisque
+        fermentum dui faucibus. Libero justo laoreet sit amet cursus sit. Nullam vehicula ipsum a arcu cursus vitae
+        congue
+        mauris. Ac turpis egestas maecenas pharetra convallis posuere morbi leo. Sem viverra aliquet eget sit amet
+        tellus cras
+        adipiscing enim. Nullam non nisi est sit amet facilisis magna etiam tempor. Euismod nisi porta lorem mollis
+        aliquam ut
+        porttitor leo. Donec enim diam vulputate ut.</div>
 
 </body>
 
