Update UI for critique

--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -10,7 +10,8 @@
 <body>
 
     <h1>Welcome!</h1>
-    <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
+    <div>Use the search bar above to retrieve articles pertaining to your interest.</div>
+    <!-- <div>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
         magna
         aliqua. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Nulla pellentesque dignissim
         enim sit
@@ -69,7 +70,7 @@
         tellus cras
         adipiscing enim. Nullam non nisi est sit amet facilisis magna etiam tempor. Euismod nisi porta lorem mollis
         aliquam ut
-        porttitor leo. Donec enim diam vulputate ut.</div>
+        porttitor leo. Donec enim diam vulputate ut.</div> -->
 
 </body>
 
