--- a/src/frames/demo2.html
+++ b/src/frames/demo2.html
@@ -1,29 +1,33 @@
 <!DOCTYPE html>
 <html>
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <title>UTP</title>
     <link rel="stylesheet" href="frames-styles.css" />
-</head>
+  </head>
 
-<body>
-
+  <body>
     <h1>Alcest</h1>
-    <div>Alcest is a French blackgaze and post-metal band from Bagnols-sur-Cèze, founded and led by Neige (Stéphane
-        Paut). It began in 2000 as a black metal solo project by Neige, soon a trio, but following the release of their
-        first demo in 2001, band members Aegnor and Argoth left the band, leaving Neige as the sole member. The band
-        played their third album, The New World Records, in 2002 as a group formed after a difficult time in the world.
-        At that time, Neige had not been able to produce a full album and was still touring all over Europe. The album
-        was released at a cost of about $15,000, but at the end of 2003, the band started producing full albums for the
-        rest of Europe.
+    <div>
+      Alcest is a French blackgaze and post-metal band from Bagnols-sur-Cèze,
+      founded and led by Neige (Stéphane Paut). It began in 2000 as a black
+      metal solo project by Neige, soon a trio, but following the release of
+      their first demo in 2001, band members Aegnor and Argoth left the band,
+      leaving Neige as the sole member. The band played their third album, The
+      New World Records, in 2002 as a group formed after a difficult time in the
+      world. At that time, Neige had not been able to produce a full album and
+      was still touring all over Europe. The album was released at a cost of
+      about $15,000, but at the end of 2003, the band started producing full
+      albums for the rest of Europe.
     </div>
-    <div>After releasing the album, Aegnor went on hiatus with his solo record 'B' on November 11, 2004. In the years
-        since, Aegnor has continued to play music, with numerous solo work, recording music, and live performances, and
-        working as an arranger for the band. Alcest has also worked with many bands on the international tour, including
-        Black Veil, the band who won the World Jazz Music Festival and the International Grand Prix of Music.</div>
+    <div>
+      After releasing the album, Aegnor went on hiatus with his solo record 'B'
+      on November 11, 2004. In the years since, Aegnor has continued to play
+      music, with numerous solo work, recording music, and live performances,
+      and working as an arranger for the band. Alcest has also worked with many
+      bands on the international tour, including Black Veil, the band who won
+      the World Jazz Music Festival and the International Grand Prix of Music.
+    </div>
     <!-- <button>Test</button> -->
-
-</body>
-
+  </body>
 </html>
