--- a/src/splash.html
+++ b/src/splash.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <meta charset="UTF-8">
-  <link rel="stylesheet" href="css/splash.css">
-  <title>UTP</title>
-</head>
-<body>
-  <img src="bin/images/splashscreen-placeholder.png">
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="stylesheet" href="css/splash.css" />
+    <title>UTP</title>
+  </head>
+  <body>
+    <img src="bin/images/splashscreen-placeholder.png" />
+  </body>
 </html>
