--- a/src/quitModal.html
+++ b/src/quitModal.html
@@ -1,37 +1,37 @@
 <!DOCTYPE html>
 <html>
-
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>UTP</title>
-    <link rel="stylesheet" href="css/quitModal.css">
-    <link rel="stylesheet" href="css/global.css">
+    <link rel="stylesheet" href="css/quitModal.css" />
+    <link rel="stylesheet" href="css/global.css" />
     <!-- <link rel="stylesheet" href="../node_modules/98.css/style.css"> -->
     <link rel="stylesheet" href="./css/98css/style.css" />
-</head>
+  </head>
 
-<body>
+  <body>
     <div class="window">
-        <div class="title-bar" id="quitModalTitleBar">
-            <div class="title-bar-text">
-                UntitledThesisProject
-            </div>
+      <div class="title-bar" id="quitModalTitleBar">
+        <div class="title-bar-text">UntitledThesisProject</div>
 
-            <div class="title-bar-controls">
-                <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
-                <!-- <button aria-label="Maximize" id="maximiseWindow" style="-webkit-app-region: no-drag"></button> -->
-                <button aria-label="Close" id="closeWindow" style="-webkit-app-region: no-drag"></button>
-            </div>
+        <div class="title-bar-controls">
+          <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
+          <!-- <button aria-label="Maximize" id="maximiseWindow" style="-webkit-app-region: no-drag"></button> -->
+          <button
+            aria-label="Close"
+            id="closeWindow"
+            style="-webkit-app-region: no-drag"
+          ></button>
         </div>
-        <div class="window-body">
-            <p>Do you want to quit UntitledThesisProject?</p>
-            <section class="field-row" style="justify-content: flex-end">
-                <button id="qMod-quit">OK</button>
-                <button id="qMod-cancel">Cancel</button>
-            </section>
-        </div>
+      </div>
+      <div class="window-body">
+        <p>Do you want to quit UntitledThesisProject?</p>
+        <section class="field-row" style="justify-content: flex-end">
+          <button id="qMod-quit">OK</button>
+          <button id="qMod-cancel">Cancel</button>
+        </section>
+      </div>
     </div>
     <script src="js/quitModal.js"></script>
-</body>
-
+  </body>
 </html>
