Testing typewriter effect

--- a/src/frames/demo1.html
+++ b/src/frames/demo1.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="frames-styles.css" />
   </head>
 
-  <body>
+  <body id="typ">
     <h1>Hugh, 15th Baron Willoughby of Parham</h1>
     <div>
       Hugh, 15th Baron Willoughby of Parham (1713 – 17 January 1765) was an
