--- a/src/frames/welcome.html
+++ b/src/frames/welcome.html
@@ -8,10 +8,10 @@
 
   <body>
     <h1>Welcome!</h1>
-    <div>
+    <div id="typ">
       Use the search bar above to retrieve articles pertaining to your interest.
     </div>
-    <div>
+    <!-- <div>
       Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
       tempor incididunt ut labore et dolore magna aliqua. Phasellus egestas
       tellus rutrum tellus pellentesque eu tincidunt tortor. Nulla pellentesque
@@ -75,6 +75,28 @@
       viverra aliquet eget sit amet tellus cras adipiscing enim. Nullam non nisi
       est sit amet facilisis magna etiam tempor. Euismod nisi porta lorem mollis
       aliquam ut porttitor leo. Donec enim diam vulputate ut.
-    </div>
+    </div> -->
+
+    <!-- <script src="../js/index.js"></script> -->
+    <script src="../../node_modules/typewriter-effect/dist/core.js"></script>
+    <script type="text/javascript">
+      var typEl = document.getElementById("typ");
+      const typewriter = new Typewriter(typEl, {
+        loop: true,
+        delay: 125,
+        cursor: "",
+      });
+
+      typewriter
+        .typeString(
+          "Use the search bar above to retrieve articles pertaining to your interest. <br/>"
+        )
+        .pauseFor(2500)
+        .typeString(
+          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Nulla pellentesque dignissim enim sit amet venenatis urna cursus. Sit amet commodo nulla facilisi nullam. Odio pellentesque diam volutpat commodo. Eget est lorem psum dolor sit amet consectetur adipiscing. Egestas congue quisque egestas diam in arcu cursus euismod. Enim nec dui nunc mattis enim uttellus elementum. Habitant morbi tristique senectus et netus et malesuada fames. Duis ultricies lacus sed turpis. Mauris a diam maecenas sed enim utsem viverra. Bibendum arcu vitae elementum curabitur vitae. Proin sagittisnisl rhoncus mattis rhoncus urna neque viverra justo. Ut tristique etegestas quis ipsum suspendisse."
+        )
+        .pauseFor(2500)
+        .start();
+    </script>
   </body>
 </html>
