--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,11 @@
             <li>DO NOT DISTRIBUTE</li>
           </ul>
 
-          <iframe src="./frames/welcome.html" id="mainContentSection"></iframe>
+          <iframe
+            src="./frames/welcome.html"
+            id="mainContentSection"
+            allow
+          ></iframe>
         </div>
       </div>
     </div>
