--- a/src/splash.html
+++ b/src/splash.html
@@ -6,6 +6,6 @@
     <title>UTP</title>
   </head>
   <body>
-    <img src="bin/images/splashscreen-placeholder.png" />
+    <img src="bin/images/splashscreen.jpg" />
   </body>
 </html>
