Set up boilerplate for tree list

--- a/src/index.html
+++ b/src/index.html
@@ -76,31 +76,67 @@
             <li id="mainListWelcome">Welcome</li>
             <li>What is UTP?</li>
             <li>
-              <details>
-                <summary>Table of Contents</summary>
+              <details open>
+                <summary>Index</summary>
                 <ul>
-                  <li>Avoid at all costs</li>
                   <li>
                     <details>
-                      <summary>Unless</summary>
+                      <summary>A-M</summary>
                       <ul>
-                        <li>Avoid</li>
-                        <li>
-                          <details>
-                            <summary>At</summary>
-                            <ul>
-                              <li>Avoid</li>
-                              <li>At</li>
-                              <li>All</li>
-                              <li>Cost</li>
-                            </ul>
-                          </details>
-                        </li>
-                        <li>All</li>
-                        <li>Cost</li>
+                        <li id="mainindexA">A</li>
+                        <li id="mainindexB">B</li>
+                        <li id="mainindexC">C</li>
+                        <li id="mainindexD">D</li>
+                        <li id="mainindexE">E</li>
+                        <li id="mainindexF">F</li>
+                        <li id="mainindexG">G</li>
+                        <li id="mainindexH">H</li>
+                        <li id="mainindexI">I</li>
+                        <li id="mainindexJ">J</li>
+                        <li id="mainindexK">K</li>
+                        <li id="mainindexL">L</li>
+                        <li id="mainindexM">M</li>
                       </ul>
                     </details>
                   </li>
+                  <li>
+                    <details>
+                      <summary>N-Z</summary>
+                      <ul>
+                        <li id="mainindexN">N</li>
+                        <li id="mainindexO">O</li>
+                        <li id="mainindexP">P</li>
+                        <li id="mainindexQ">Q</li>
+                        <li id="mainindexR">R</li>
+                        <li id="mainindexS">S</li>
+                        <li id="mainindexT">T</li>
+                        <li id="mainindexU">U</li>
+                        <li id="mainindexV">V</li>
+                        <li id="mainindexW">W</li>
+                        <li id="mainindexX">X</li>
+                        <li id="mainindexY">Y</li>
+                        <li id="mainindexZ">Z</li>
+                      </ul>
+                    </details>
+                  </li>
+                  <li>
+                    <details>
+                      <summary>0-9</summary>
+                      <ul>
+                        <li id="mainindex0">0</li>
+                        <li id="mainindex1">1</li>
+                        <li id="mainindex2">2</li>
+                        <li id="mainindex3">3</li>
+                        <li id="mainindex4">4</li>
+                        <li id="mainindex5">5</li>
+                        <li id="mainindex6">6</li>
+                        <li id="mainindex7">7</li>
+                        <li id="mainindex8">8</li>
+                        <li id="mainindex9">9</li>
+                      </ul>
+                    </details>
+                  </li>
+                  <li id="mainindexNonAN">Nonalphanumerial</li>
                 </ul>
               </details>
             </li>
@@ -113,8 +149,8 @@
                 </ul>
               </details>
             </li>
-            <li>Glossary</li>
-            <li>DO NOT DISTRIBUTE</li>
+            <li>Random Page</li>
+            <li>Licenses</li>
           </ul>
 
           <iframe
