Updated splashscreen and packages

--- a/src/frames/boilerplate.html
+++ b/src/frames/boilerplate.html
@@ -8,11 +8,8 @@
 
   <body>
     <h1>Articles starting with A</h1>
-    <div>
-      It includes the variation of A, such as Â, Á, Æ, and more, but bear in
-      mind that this list is by no means exhaustive.
-    </div>
+    <div>Some of the articles that start with A:</div>
     <div>Anarchy</div>
-    <div>Ann Berlin</div>
+    <div>Anne Boleyn</div>
   </body>
 </html>
