--- a/src/quitModal.html
+++ b/src/quitModal.html
@@ -12,7 +12,7 @@
   <body>
     <div class="window">
       <div class="title-bar" id="quitModalTitleBar">
-        <div class="title-bar-text">UntitledThesisProject</div>
+        <div class="title-bar-text">Encyclopaedia Mundi</div>
 
         <div class="title-bar-controls">
           <!-- <button aria-label="Minimize" id="minimiseWindow" style="-webkit-app-region: no-drag"></button> -->
@@ -25,7 +25,7 @@
         </div>
       </div>
       <div class="window-body">
-        <p>Do you want to quit UntitledThesisProject?</p>
+        <p>Do you want to exit Encyclopaedia Mundi?</p>
         <section class="field-row" style="justify-content: flex-end">
           <button id="qMod-quit">OK</button>
           <button id="qMod-cancel">Cancel</button>
