--- a/src/frames/populate.html
+++ b/src/frames/populate.html
@@ -41,17 +41,19 @@
         // skipAddStyles: true,
       });
 
-      typewriter
-        .typeString(
-          "Use the search bar above to retrieve articles pertaining to your interest. <br/>"
-        )
-        .pauseFor(2500)
-        .typeString(
-          "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Phasellus egestas tellus rutrum tellus pellentesque eu tincidunt tortor. Nulla pellentesque dignissim enim sit amet venenatis urna cursus. Sit amet commodo nulla facilisi nullam. Odio pellentesque diam volutpat commodo. Eget est lorem psum dolor sit amet consectetur adipiscing. Egestas congue quisque egestas diam in arcu cursus euismod. Enim nec dui nunc mattis enim uttellus elementum. Habitant morbi tristique senectus et netus et malesuada fames. Duis ultricies lacus sed turpis. Mauris a diam maecenas sed enim utsem viverra. Bibendum arcu vitae elementum curabitur vitae. Proin sagittisnisl rhoncus mattis rhoncus urna neque viverra justo. Ut tristique etegestas quis ipsum suspendisse."
-        )
-        // .pauseFor(2500)
+      tw1
+        .typeString("Article Title")
+        .pauseFor(500)
         .changeCursor(" ")
+        .callFunction(() => {
+          tw2
+            .typeString("//Appending to the article starter")
+            .pauseFor(500)
+            .changeCursor(" ")
+            .start();
+        })
         .start();
+      tw2.typeString("Article Starter").pauseFor(500).changeCursor(" ").start();
     </script>
   </body>
 </html>
